2022-05-11  Kate Cheney  <katherine_cheney@apple.com>

        Mail compose: right clicking an image attachment selects it
        https://bugs.webkit.org/show_bug.cgi?id=240315
        rdar://45454933

        Reviewed by Wenson Hsieh.

        * wtf/cocoa/RuntimeApplicationChecksCocoa.h:

2022-05-10  Brent Fulgham  <bfulgham@apple.com>

        Remove abandoned CSSDeferredParser implementation and feature flag
        https://bugs.webkit.org/show_bug.cgi?id=240244

        Reviewed by Antti Koivisto.

        This patch rolls out the abandoned CSSDeferredParser implementation added in Bug 165743.

        * Scripts/Preferences/WebPreferences.yaml:

2022-05-09  Ross Kirsling  <ross.kirsling@sony.com>

        Temporal and Date must reject expanded year -000000
        https://bugs.webkit.org/show_bug.cgi?id=240263

        Reviewed by Yusuke Suzuki.

        * wtf/DateMath.cpp:
        (WTF::parseES5DatePortion):

2022-05-09  Per Arne Vollan  <pvollan@apple.com>

        [macOS] HTTP traffic is not filtered in the parental controls filter
        https://bugs.webkit.org/show_bug.cgi?id=240180
        <rdar://problem/92875540>

        Reviewed by Alexey Proskuryakov.

        Add HAVE macro which tells us which OS versions are filtering HTTP traffic on behalf of WebKit.

        * wtf/PlatformHave.h:

2022-05-08  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Double tapping on YouTube video causes playback to pause instead of seek
        https://bugs.webkit.org/show_bug.cgi?id=240222
        rdar://92637636

        Reviewed by Aditya Keerthi and Kate Cheney.

        Add a new compile-time flag to guard the presence of `-[UITextInteractionAssistant contextMenuInteraction]`. See
        WebKit/ChangeLog for more details.

        * wtf/PlatformHave.h:

2022-05-09  Diego Pino Garcia  <dpino@igalia.com>

        Unreviewed, non-unified build fixes after r293562

        * wtf/text/StringCommon.h:

2022-05-06  Megan Gardner  <megan_gardner@apple.com>
