@@ -1,3 +1,13 @@
+2022-05-12  Michael Catanzaro  <mcatanzaro@redhat.com>
+
+        -Wattributes warnings from AtomString.cpp and WTFString.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=240358
+
+        Reviewed by Yusuke Suzuki.
+
+        * wtf/text/AtomString.cpp:
+        * wtf/text/WTFString.cpp:
+
 2022-05-11  Kate Cheney  <katherine_cheney@apple.com>
 
         Mail compose: right clicking an image attachment selects it
